[gd_scene load_steps=10 format=3 uid="uid://dxg8m0y80dpyp"]

[ext_resource type="Script" path="res://Scripts/gun.gd" id="1_hbx3y"]
[ext_resource type="Script" path="res://Scripts/rarity.gd" id="2_gw35d"]
[ext_resource type="Texture2D" uid="uid://bm8fboif1sean" path="res://Art/Sprites/icon pistol.png" id="3_3bisb"]
[ext_resource type="Texture2D" uid="uid://dcayjrr65pgpy" path="res://Art/Sprites/gun spritesheet.png" id="3_6aho8"]
[ext_resource type="Texture2D" uid="uid://l0xncvn3i5id" path="res://Art/Sprites/muzzleflash.png" id="4_4neoc"]
[ext_resource type="Script" path="res://Scripts/gun_positioner.gd" id="5_lv77j"]
[ext_resource type="Script" path="res://Scripts/aim_assist.gd" id="7_nbw73"]

[sub_resource type="Resource" id="Resource_8vy61"]
script = ExtResource("2_gw35d")
rarity = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyahl"]
size = Vector2(35, 7.99984)

[node name="Gun" type="Area2D" groups=["gun"]]
process_mode = 3
use_parent_material = true
rotation = 6.28319
collision_layer = 4
collision_mask = 128
script = ExtResource("1_hbx3y")
metadata/Title = "Pistol"
metadata/Type = ""
metadata/Rarity = SubResource("Resource_8vy61")
metadata/Icon = ExtResource("3_3bisb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.06487e-12, -2.38419e-07)
shape = SubResource("RectangleShape2D_dyahl")

[node name="Sprite2D" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("3_6aho8")
region_enabled = true

[node name="SightHolder" type="Node2D" parent="Sprite2D"]
use_parent_material = true

[node name="MagazineHolder" type="Node2D" parent="Sprite2D"]
use_parent_material = true

[node name="Firepoint" type="Node2D" parent="."]
use_parent_material = true

[node name="MuzzleFlash" type="Sprite2D" parent="Firepoint"]
visible = false
use_parent_material = true
position = Vector2(8, -3.5731e-05)
texture = ExtResource("4_4neoc")

[node name="ShootTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Node2D" type="Node2D" parent="."]
process_mode = 3
script = ExtResource("5_lv77j")

[node name="AimAssist" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("7_nbw73")

[node name="ShapeCast2D" type="Area2D" parent="AimAssist"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="AimAssist/ShapeCast2D"]
polygon = PackedVector2Array(0, 0, 16, -16, 280, -32, 280, 32, 16, 16)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="body_entered" from="AimAssist/ShapeCast2D" to="AimAssist" method="_on_shape_cast_2d_body_entered"]
[connection signal="body_exited" from="AimAssist/ShapeCast2D" to="AimAssist" method="_on_shape_cast_2d_body_exited"]
